# aether

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  PROJECT_STATUS.md  README.md  SETUP.md  artifacts.manifest.json  fly.toml  pyproject.toml
.github/workflows/: ci.yml  verify-deployment.yml
apps/api/: README.md  pyproject.toml
apps/api/aether_api/: __init__.py  config.py  loaders.py  main.py  manifest.py  models.py
apps/api/aether_api/assets/india_nw_heatwave_2022_04/: bounds.json
apps/api/aether_api/assets/permian_basin_2022/: bounds.json  mask.geojson
apps/api/aether_api/assets/turkmenistan_goturdepe_2022_08_15/: bounds.json  mask.geojson
apps/api/tests/: test_api.py  test_api_heat.py  test_artifact_manifest.py  test_container_live.py  test_deploy_guards.py  test_image_inventory.py  test_no_staleness.py  test_no_staleness_heat.py  test_no_staleness_permian.py  test_report_completeness.py  test_tier_rubric.py
apps/web/: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/scripts/: copy-cesium.mjs
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/components/: CesiumGlobe.tsx  Dashboard.tsx  FactorAttribution.tsx  Inspector.tsx  SourceAttribution.tsx
apps/web/src/lib/: api.ts  motion.ts  types.ts
attribution_outputs/india_nw_heatwave_2022_04/: diagnostics.json  factor_hypotheses.json  factor_hypotheses.md
attribution_outputs/permian_basin_2022/: hypotheses.json  hypotheses.md
attribution_outputs/turkmenistan_goturdepe_2022_08_15/: hypotheses.json  hypotheses.md  hypotheses.nasa_k.json
docs/: PROJECT_STATUS_TEMPLATE.md  aether_spec.md  debt.md  deployment.md  key_results.json
docs/adr/: 0001-ontology-as-foundation.md  0002-eval-metric-families.md  0003-area-phenomenon-ontology.md  0004-area-event-eval-semantics.md  0005-factor-attribution-schema.md
docs/design/: aether_photoreal_mockup.html
docs/reports/: redesign_v2_report.md  sprint10_stage_a_gate.md  sprint10_stage_a_probe.md  sprint10_stage_b_gate.md  sprint10_stage_b_report.md  sprint10_stage_c_fix.md  sprint10_stage_c_report.md  sprint10_stage_d_report.md  sprint10_stage_d_verification.json  sprint11_stage_a.md  sprint11_stage_a_gate.md  sprint11_stage_b_gate.md  sprint11_stage_b_report.md  sprint11_stage_c_report.md  sprint11_stage_d.md  sprint6_dashboard_panels.md  sprint6_migration_report.md  sprint7_stage_a_report.md  sprint7_stage_b_report.md  sprint7_stage_c_report.md  sprint7_stage_d_report.md  sprint8_debt_report.md  sprint9_stage_a_report.md  sprint9_stage_b_report.md  sprint9_stage_c_report.md  sprint9_stage_d_report.md
docs/science/: eval_semantics.md  sprint11_validation_writeup.md  sprint2_validation.md  sprint4_attribution.md  sprint6_hitran_independence.md  sprint7_permian.md  sprint9_heat_validation.md  validation_tiers.md
docs/tasks/: sprint10_deployment.md  sprint11_portfolio.md  sprint1_item5_emit_proof_of_life.md  sprint2_detection_quantification.md  sprint3_dashboard.md  sprint4_causal_engine.md  sprint5_hypotheses_ui.md  sprint6_hitran_independence.md  sprint7_permian.md  sprint8_debt.md  sprint9_heat.md
eval/benchmark/: README.md  aliso_canyon_2015.yaml  india_nw_heatwave_2022_04.yaml  permian_basin_2022.yaml  turkmenistan_goturdepe_2022_08_15.yaml
eval/harness/: README.md  pyproject.toml
eval/harness/aether_eval/: __init__.py  cli.py  loader.py  metrics.py  pipelines.py  real_pipeline.py  regression.py  runner.py  schema.py
eval/harness/tests/: test_loader.py  test_metrics.py  test_pipelines.py  test_real_pipeline.py  test_regression.py  test_schema.py
scripts/: acquire_ogim_subset.py  build_artifact_manifest.py  build_dashboard_assets.py  build_heat_assets.py  diagnose_blob_mass_change.py  diagnose_loocv_centering.py  diagnose_stage_a.py  diagnose_stage_a_alignment.py  diagnose_stage_a_confirm.py  diagnose_tail_and_streak.py  diagnose_wind_location.py  fetch_hitran_ch4.py  run_attribution_event.py  run_attribution_goturdepe.py  run_event_quantification.py  run_heat_attribution.py  run_heat_lst_uhi.py  run_heat_stage_b.py  run_heat_uhi.py  run_hitran_k_stage_a.py  run_hitran_k_stage_b.py  run_hitran_k_v2.py  run_migration_v2_operational.py  run_segmentation_blob_check.py  run_stage_a_goturdepe.py  run_stage_b_goturdepe.py  sprint9_extract_event_region.py  sprint9_fetch_era5_tmax.py  sprint9_fetch_factors.py  sprint9_fetch_modis.py  sprint9_fetch_station_imd.py  sprint9_probe_era5_metadata.py  sprint9_scan_era5_heat.py
stage_a_outputs/permian_basin_2022/: stage_a_report.json
stage_a_outputs/permian_basin_2022/hitran_k/: hitran_k_sat.json  hitran_k_sat_provenance.json
stage_a_outputs/sprint9_heat_probe/: era5_metadata.json  era5_scan_results.json  event_region_2022_04.json
stage_a_outputs/turkmenistan_goturdepe_2022_08_15/: segmentation_report.json  stage_a_report.json  tail_and_streak_report.json
stage_a_outputs/turkmenistan_goturdepe_2022_08_15/hitran_k/: hitran_ch4_target  hitran_ch4_target_sat  hitran_k.json  hitran_k_provenance.json  hitran_k_sat.json  hitran_k_sat_provenance.json  hitran_k_stage_a_report.json  hitran_k_stage_b_report.json  hitran_k_v2_report.json
stage_b_outputs/india_nw_heatwave_2022_04/: air_lane.json  lst_lane.json  uhi.json  validation.json  validation_exploratory_minobs3.json
stage_b_outputs/permian_basin_2022/: diagnostics.json  q_estimate.json  q_estimate_report.md  wind_location_check.json
stage_b_outputs/turkmenistan_goturdepe_2022_08_15/: q_estimate.json  q_estimate_report.md  wind_location_check.json  wind_location_check.nasa_k.json
tools/: build_key_results.py  maintain_storage.sh  setup_rag.py  verify_deployment.py  verify_image_inventory.py
tools/tests/: conftest.py  test_key_results.py  test_verify_deployment.py
