[project]
name = "aether-workspace"
version = "0.1.0"
description = "Aether Planetary Engine — workspace root"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aether-ontology",
]

[tool.uv.sources]
aether-ontology = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/ontology",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "ipython>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"