[project]
name = "aether-workspace"
version = "0.1.0"
description = "Aether Planetary Engine — workspace root"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aether-ontology",
    "aether-eval",
    "aether-data-spine",
    "aether-cli",
]

[tool.uv.sources]
aether-ontology = { workspace = true }
aether-eval = { workspace = true }
aether-data-spine = { workspace = true }
aether-cli = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/ontology",
    "packages/data_spine",
    "packages/cli",
    "eval/harness",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "ipython>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["packages", "eval/harness"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers -m 'not integration'"
markers = [
    "integration: marks tests as integration tests that hit real network endpoints (deselected by default)",
]
