[project]
name = "aether-workspace"
version = "0.1.0"
description = "Aether Planetary Engine — workspace root"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aether-ontology",
    "aether-eval",
    "aether-data-spine",
    "aether-detection",
    "aether-cli",
    "aether-api",
    "aether-causal",
]

[tool.uv.sources]
aether-ontology = { workspace = true }
aether-eval = { workspace = true }
aether-data-spine = { workspace = true }
aether-detection = { workspace = true }
aether-cli = { workspace = true }
aether-api = { workspace = true }
aether-causal = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/ontology",
    "packages/data_spine",
    "packages/detection",
    "packages/cli",
    "eval/harness",
    "apps/api",
    "packages/causal",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "ipython>=8.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
# Scientific notation in this codebase deliberately uses Greek letters (μ, α, σ,
# λ, β, τ), the ⊙ Hadamard-product symbol, the · centered dot, and the °/× signs.
# These are standard in atmospheric/spectroscopy literature and are unambiguous
# in context. RUF001/RUF002/RUF003 (ambiguous-unicode-character) would flag them
# as confusables; we disable them rather than rewrite physics in ASCII.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# These frozen diagnostic scripts use the matched-filter matrix notation from
# the literature (X radiance matrix, S covariance, T target, C correction, G
# whitening) — lowercasing it would obscure the physics they document.
"scripts/diagnose_stage_a_alignment.py" = ["N806"]
"scripts/diagnose_stage_a_confirm.py" = ["N806"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["packages", "eval/harness", "apps/api", "tools/tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers -m 'not integration'"
markers = [
    "integration: marks tests as integration tests that hit real network endpoints (deselected by default)",
]
