[project]
name = "aether-api"
version = "0.1.0"
description = "Aether dashboard API — serves committed Stage A/B outputs as JSON + rasters"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aether-ontology",
    "aether-eval",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aether_api"]
