[project]
name = "aether-eval"
version = "0.1.0"
description = "Aether evaluation harness — benchmarks, metrics, runner"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aether-ontology",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

# Sprint 10 F1 split: the real-pipeline eval recipes (ADR 0002) are imported
# lazily inside aether_eval.real_pipeline, so their heavy scientific stack
# (scipy/rasterio/pandas via detection + data-spine) is an EXTRA. The API
# image depends on plain aether-eval (loader/schema only) and stays slim; the
# workspace root depends on aether-detection/aether-data-spine directly, so
# the dev/CI environment — and every eval run — is unchanged.
[project.optional-dependencies]
pipeline = [
    "aether-detection",
    "aether-data-spine",
    "numpy>=1.26",
    "rioxarray>=0.15",
]

[project.scripts]
aether-eval = "aether_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aether_eval"]
